--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ $primary-dark: darken($primary, 10%);
 //$primary-dark:#D4DD7D; 
 $secondary: #9C8353;
 $black: #2f2f41;
-$white: #ffffff;
+$white: #FDFDFD;
 $white-offset: #F9F6E9; 
 $steel: #5c5a5a;
 
