--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,10 +2,10 @@
 ---
 
 // Colors
-$primary: #306B21;
+$primary: #446D4E;
 $primary-dark: darken($primary, 10%);
 //$primary-dark:#D4DD7D; 
-$secondary: #9C8353;
+$secondary: #CFC4B7;
 $black: #2f2f41;
 $white: #FDFDFD;
 $white-offset: #F9F6E9; 
