--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,8 +31,8 @@ bodyClass: "page-home"
         <div class="feature">
           {% if feature.image %}
           <div class="feature-image"><img alt="{{ feature.title }} logo" src="{{ feature.image.url | relative_url }}" width="{{ feature.image.width }}" height="{{ feature.image.height }}" /></div>
-          {% endif %}          
-          <h2 class="feature-title"><a href="{{ feature.url }}">{{ feature.title }}</a></h2>
+          {% endif %}
+          <h2 class="feature-title"><a href="{{ feature.url | relative_url }}">{{ feature.title }}</a></h2>
           <div class="feature-content">{{ feature.description }}</div>
         </div>
       </div>
